--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,12 +11,6 @@ macro(make_test TEST_NAME)
   gtest_discover_tests(${TEST_NAME})
 endmacro()
 
-make_test(io_test)
-
-add_executable(io_modern_test io_modern_test.cpp)
-target_compile_options(io_modern_test PRIVATE -fcoroutines)
-target_link_libraries(io_modern_test PRIVATE ioxz)
-
-add_executable(redis_client redis_client.cpp)
-target_compile_options(redis_client PRIVATE -fcoroutines)
-target_link_libraries(redis_client PRIVATE ioxz)
+make_test(io_context_test)
+make_test(ip_test)
+make_test(tcp_socket_test)
