--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ if(LIBURING_INCLUDE_DIR AND LIBURING_LIBRARY)
     message(STATUS "  Include: ${LIBURING_INCLUDE_DIR}")
     message(STATUS "  Library: ${LIBURING_LIBRARY}")
     set(LIBURING_FOUND TRUE)
-    add_compile_definitions(IOXZ_HAS_URING)
 else()
     message(STATUS "liburing not found - using epoll only")
     set(LIBURING_FOUND FALSE)
@@ -34,6 +33,7 @@ target_link_libraries(ioxz INTERFACE pthread fmt::fmt)
 if(LIBURING_FOUND)
     target_include_directories(ioxz INTERFACE ${LIBURING_INCLUDE_DIR})
     target_link_libraries(ioxz INTERFACE ${LIBURING_LIBRARY})
+    target_compile_definitions(ioxz INTERFACE IOXZ_HAS_URING)
 endif()
 
 option(IOXZ_BUILD_TESTS "Build tests" OFF)
