--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,12 +33,12 @@ target_link_libraries(ioxz INTERFACE pthread fmt::fmt)
 if(LIBURING_FOUND)
     target_include_directories(ioxz INTERFACE ${LIBURING_INCLUDE_DIR})
     target_link_libraries(ioxz INTERFACE ${LIBURING_LIBRARY})
-    target_compile_definitions(ioxz INTERFACE IOXZ_HAS_URING)
+    target_compile_definitions(ioxz INTERFACE IOCORO_HAS_URING)
 endif()
 
-option(IOXZ_BUILD_TESTS "Build tests" OFF)
+option(IOCORO_BUILD_TESTS "Build tests" OFF)
 
-if(IOXZ_BUILD_TESTS)
+if(IOCORO_BUILD_TESTS)
     enable_testing()
     add_subdirectory(test)
 endif()
