--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ macro(make_test TEST_NAME)
   add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
   target_compile_options(${TEST_NAME} PRIVATE -fcoroutines)
   target_link_libraries(${TEST_NAME} PRIVATE
-    ioxz
+    iocoro
     GTest::gtest
     GTest::gtest_main
   )
