--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include(CMakePackageConfigHelpers)
 option(IOCORO_BUILD_TESTS "Build tests" ${PROJECT_IS_TOP_LEVEL})
 option(IOCORO_ENABLE_WARNINGS "Enable warning flags for iocoro tests/examples" ${PROJECT_IS_TOP_LEVEL})
 option(IOCORO_ENABLE_URING "Enable io_uring backend if liburing is available" ON)
-option(IOCORO_ENABLE_ASAN "Enable AddressSanitizer" ON)
+option(IOCORO_ENABLE_ASAN "Enable AddressSanitizer" OFF)
 
 add_library(iocoro INTERFACE)
 add_library(iocoro::iocoro ALIAS iocoro)
