--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,7 +18,7 @@ make_test(io_context_test)
 make_test(io_context_impl_test)
 make_test(executor_test)
 make_test(timer_handle_test)
-make_test(timer_test)
+make_test(steady_timer_test)
 make_test(co_sleep_test)
 make_test(co_spawn_test)
 make_test(when_all_test)
