--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,3 +24,5 @@ make_test(co_spawn_test)
 make_test(when_all_test)
 make_test(when_any_test)
 make_test(endpoint_test)
+make_test(socket_impl_base_test)
+make_test(stream_socket_impl_test)
