--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ make_test(when_any_test)
 make_test(endpoint_test)
 make_test(socket_impl_base_test)
 make_test(stream_socket_impl_test)
+make_test(async_read_until_test)
