--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,3 +27,4 @@ make_test(endpoint_test)
 make_test(socket_impl_base_test)
 make_test(stream_socket_impl_test)
 make_test(async_read_until_test)
+make_test(async_timeout_test)
