--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,3 +29,4 @@ make_test(stream_socket_impl_test)
 make_test(async_read_until_test)
 make_test(async_timeout_test)
 make_test(tcp_socket_test)
+make_test(with_timeout_test)
