--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,4 +29,5 @@ make_test(async_read_until_test)
 make_test(async_timeout_test)
 make_test(tcp_socket_test)
 make_test(tcp_acceptor_test)
+make_test(local_stream_test)
 make_test(with_timeout_test)
