--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,3 +30,4 @@ make_test(tcp_socket_test)
 make_test(tcp_acceptor_test)
 make_test(local_stream_test)
 make_test(with_timeout_test)
+make_test(thread_pool_test)
