feat: add thread_pool and unique_function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,7 +17,6 @@ endmacro()
 make_test(io_context_test)
 make_test(io_context_impl_test)
 make_test(executor_test)
-make_test(timer_handle_test)
 make_test(steady_timer_test)
 make_test(co_sleep_test)
 make_test(co_spawn_test)
@@ -29,4 +28,6 @@ make_test(async_read_until_test)
 make_test(async_timeout_test)
 make_test(tcp_socket_test)
 make_test(tcp_acceptor_test)
+make_test(local_stream_test)
 make_test(with_timeout_test)
+make_test(thread_pool_test)
