--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ make_test(co_spawn_test)
 make_test(when_all_test)
 make_test(when_any_test)
 make_test(endpoint_test)
+make_test(resolver_test)
 make_test(stream_socket_impl_test)
 make_test(async_read_until_test)
 make_test(async_timeout_test)
