--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,5 +31,6 @@ make_test(tcp_socket_test)
 make_test(tcp_acceptor_test)
 make_test(udp_socket_test)
 make_test(local_stream_test)
+make_test(local_dgram_test)
 make_test(with_timeout_test)
 make_test(thread_pool_test)
