feat: add datagram socket support

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,6 +29,8 @@ make_test(async_read_until_test)
 make_test(async_timeout_test)
 make_test(tcp_socket_test)
 make_test(tcp_acceptor_test)
+make_test(udp_socket_test)
 make_test(local_stream_test)
+make_test(local_dgram_test)
 make_test(with_timeout_test)
 make_test(thread_pool_test)
