--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,3 +34,4 @@ make_test(local_stream_test)
 make_test(local_dgram_test)
 make_test(with_timeout_test)
 make_test(thread_pool_test)
+make_test(switch_to_test)
