--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,3 +36,4 @@ make_test(with_timeout_test)
 make_test(thread_pool_test)
 make_test(switch_to_test)
 make_test(strand_test)
+make_test(cancellation_token_test)
