--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ option(IOCORO_BUILD_TESTS "Build tests" ${PROJECT_IS_TOP_LEVEL})
 option(IOCORO_ENABLE_WARNINGS "Enable warning flags for iocoro tests/examples" ${PROJECT_IS_TOP_LEVEL})
 option(IOCORO_ENABLE_URING "Enable io_uring backend if liburing is available" ON)
 option(IOCORO_ENABLE_ASAN "Enable AddressSanitizer" OFF)
+option(IOCORO_BUILD_BENCHMARKS "Build benchmarks" OFF)
 
 add_library(iocoro INTERFACE)
 add_library(iocoro::iocoro ALIAS iocoro)
@@ -73,6 +74,10 @@ endif()
 if(IOCORO_BUILD_TESTS)
     enable_testing()
     add_subdirectory(test)
+endif()
+
+if(IOCORO_BUILD_BENCHMARKS)
+    add_subdirectory(benchmark)
 endif()
 
 install(TARGETS iocoro EXPORT iocoroTargets)
