--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,15 +22,22 @@ make_test(co_sleep_test)
 make_test(co_spawn_test)
 make_test(when_all_test)
 make_test(when_any_test)
+make_test(async_read_test)
+make_test(async_write_test)
+make_test(async_read_until_test)
+make_test(thread_pool_test)
+make_test(strand_test)
+make_test(switch_to_test)
+make_test(error_test)
+make_test(expected_test)
 make_test(endpoint_test)
 make_test(resolver_test)
-make_test(stream_socket_impl_test)
-make_test(async_read_until_test)
+make_test(socket_impl_base_test)
 make_test(tcp_socket_test)
-make_test(tcp_acceptor_test)
 make_test(udp_socket_test)
+make_test(acceptor_impl_test)
+make_test(tcp_acceptor_test)
 make_test(local_stream_test)
 make_test(local_dgram_test)
-make_test(thread_pool_test)
-make_test(switch_to_test)
-make_test(strand_test)
+make_test(stream_socket_impl_test)
+make_test(datagram_socket_impl_test)
