--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,9 +22,11 @@ make_test(co_sleep_test)
 make_test(co_spawn_test)
 make_test(when_all_test)
 make_test(when_any_test)
+make_test(awaitable_operators_test)
 make_test(async_read_test)
 make_test(async_write_test)
 make_test(async_read_until_test)
+make_test(timeout_test)
 make_test(thread_pool_test)
 make_test(strand_test)
 make_test(switch_to_test)
