--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,12 @@ project(iocoro VERSION 0.1.0 LANGUAGES CXX)
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
-option(IOCORO_BUILD_TESTS "Build tests" ${PROJECT_IS_TOP_LEVEL})
+option(IOCORO_BUILD_TESTS "Build tests" OFF)
 option(IOCORO_ENABLE_WARNINGS "Enable warning flags for iocoro tests/examples" ${PROJECT_IS_TOP_LEVEL})
 option(IOCORO_ENABLE_URING "Enable io_uring backend if liburing is available" OFF)
 option(IOCORO_ENABLE_ASAN "Enable AddressSanitizer" OFF)
 option(IOCORO_BUILD_BENCHMARKS "Build benchmarks" OFF)
+option(IOCORO_BUILD_EXAMPLES "Build examples" ${PROJECT_IS_TOP_LEVEL})
 
 add_library(iocoro INTERFACE)
 add_library(iocoro::iocoro ALIAS iocoro)
@@ -75,6 +76,10 @@ endif()
 if(IOCORO_BUILD_TESTS)
     enable_testing()
     add_subdirectory(test)
+endif()
+
+if(IOCORO_BUILD_EXAMPLES)
+    add_subdirectory(examples)
 endif()
 
 if(IOCORO_BUILD_BENCHMARKS)
