feat: enhance stop_token semantics

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,11 @@ name: CI
 
 on:
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
 
 jobs:
   build-test:
@@ -11,6 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         toolchain: [gcc, clang]
+        sanitizer: [none, asan, ubsan, tsan]
+        exclude:
+          # Prefer clang for TSan (better support, fewer false positives).
+          - toolchain: gcc
+            sanitizer: tsan
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,7 +53,72 @@ jobs:
           CXX: ${{ matrix.toolchain == 'clang' && 'clang++' || 'g++' }}
         run: |
           chmod +x ./build.sh
-          ./build.sh -c -t
+          if [ "${{ matrix.sanitizer }}" = "asan" ]; then
+            ./build.sh -c -t --asan
+          elif [ "${{ matrix.sanitizer }}" = "ubsan" ]; then
+            ./build.sh -c -t --ubsan
+          elif [ "${{ matrix.sanitizer }}" = "tsan" ]; then
+            ./build.sh -c -t --tsan
+          else
+            ./build.sh -c -t
+          fi
+
+  install-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build pkg-config g++
+
+      - name: Build and install
+        run: |
+          chmod +x ./build.sh
+          ./build.sh -c -r
+          cmake --install build --prefix "$PWD/_install"
+
+      - name: Build consumer with find_package
+        run: |
+          mkdir -p /tmp/iocoro-consumer
+          cat > /tmp/iocoro-consumer/CMakeLists.txt <<'EOF'
+          cmake_minimum_required(VERSION 3.15)
+          project(iocoro_consumer LANGUAGES CXX)
+
+          set(CMAKE_CXX_STANDARD 20)
+          set(CMAKE_CXX_STANDARD_REQUIRED ON)
+          set(CMAKE_CXX_EXTENSIONS OFF)
+
+          find_package(iocoro REQUIRED)
+
+          add_executable(consumer main.cpp)
+          target_link_libraries(consumer PRIVATE iocoro::iocoro)
+          EOF
+
+          cat > /tmp/iocoro-consumer/main.cpp <<'EOF'
+          #include <iocoro/iocoro.hpp>
+          #include <chrono>
+
+          using namespace std::chrono_literals;
+
+          auto task() -> iocoro::awaitable<void> {
+            co_await iocoro::co_sleep(1ms);
+          }
+
+          int main() {
+            iocoro::io_context ctx;
+            iocoro::co_spawn(ctx.get_executor(), task(), iocoro::detached);
+            ctx.run();
+            return 0;
+          }
+          EOF
+
+          cmake -S /tmp/iocoro-consumer -B /tmp/iocoro-consumer/build -G Ninja \
+            -DCMAKE_PREFIX_PATH="$PWD/_install"
+          cmake --build /tmp/iocoro-consumer/build -j
+          /tmp/iocoro-consumer/build/consumer
 
   build-benchmarks:
     runs-on: ubuntu-latest
