--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,7 @@ make_test(async_write_test)
 make_test(async_read_until_test)
 make_test(timeout_test)
 make_test(this_coro_stop_token_test)
+make_test(condition_event_test)
 make_test(thread_pool_test)
 make_test(strand_test)
 make_test(switch_to_test)
