--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,11 +22,10 @@ make_test(co_sleep_test)
 make_test(co_spawn_test)
 make_test(when_all_test)
 make_test(when_any_test)
-make_test(awaitable_operators_test)
 make_test(async_read_test)
 make_test(async_write_test)
 make_test(async_read_until_test)
-make_test(timeout_test)
+make_test(with_timeout_test)
 make_test(this_coro_stop_token_test)
 make_test(condition_event_test)
 make_test(thread_pool_test)
