--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ make_test(async_read_test)
 make_test(async_write_test)
 make_test(async_read_until_test)
 make_test(with_timeout_test)
-make_test(this_coro_stop_token_test)
+make_test(this_coro_test)
 make_test(condition_event_test)
 make_test(thread_pool_test)
 make_test(strand_test)
@@ -44,6 +44,5 @@ make_test(local_stream_test)
 make_test(local_dgram_test)
 make_test(stream_socket_impl_test)
 make_test(datagram_socket_impl_test)
-
-make_test(stress_fd_registry_test)
-make_test(stress_timer_registry_test)
+make_test(fd_registry_test)
+make_test(timer_registry_test)
