--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,48 +1,18 @@
 find_package(GTest REQUIRED)
 
-macro(make_test TEST_NAME)
-  add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
-  target_compile_options(${TEST_NAME} PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
-  target_link_libraries(${TEST_NAME} PRIVATE
+file(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+
+foreach(test_src ${TEST_SOURCES})
+  get_filename_component(test_name ${test_src} NAME_WE)
+  add_executable(${test_name} ${test_src})
+  target_compile_options(${test_name} PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+  target_link_libraries(${test_name} PRIVATE
     iocoro
     GTest::gtest
     GTest::gtest_main
   )
   if(TARGET iocoro_warnings)
-    target_link_libraries(${TEST_NAME} PRIVATE iocoro_warnings)
+    target_link_libraries(${test_name} PRIVATE iocoro_warnings)
   endif()
-  gtest_discover_tests(${TEST_NAME})
-endmacro()
-
-make_test(io_context_test)
-make_test(io_context_impl_test)
-make_test(io_executor_test)
-make_test(steady_timer_test)
-make_test(co_sleep_test)
-make_test(co_spawn_test)
-make_test(when_all_test)
-make_test(when_any_test)
-make_test(async_read_test)
-make_test(async_write_test)
-make_test(async_read_until_test)
-make_test(with_timeout_test)
-make_test(this_coro_test)
-make_test(condition_event_test)
-make_test(thread_pool_test)
-make_test(strand_test)
-make_test(switch_to_test)
-make_test(error_test)
-make_test(expected_test)
-make_test(endpoint_test)
-make_test(resolver_test)
-make_test(socket_impl_base_test)
-make_test(tcp_socket_test)
-make_test(udp_socket_test)
-make_test(acceptor_impl_test)
-make_test(tcp_acceptor_test)
-make_test(local_stream_test)
-make_test(local_dgram_test)
-make_test(stream_socket_impl_test)
-make_test(datagram_socket_impl_test)
-make_test(fd_registry_test)
-make_test(timer_registry_test)
+  gtest_discover_tests(${test_name})
+endforeach()
