--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,3 +153,5 @@ jobs:
             benchmark/reports/perf_summary.txt
             benchmark/reports/connect_accept_report.json
             benchmark/reports/connect_accept_summary.txt
+            benchmark/reports/throughput_report.json
+            benchmark/reports/throughput_summary.txt
