--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -22,3 +22,14 @@ target_link_libraries(asio_tcp_connect_accept PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_connect_accept PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_connect_accept PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_connect_accept PRIVATE ${Boost_INCLUDE_DIRS})
+
+add_executable(iocoro_tcp_throughput apps/iocoro_tcp_throughput.cpp)
+target_link_libraries(iocoro_tcp_throughput PRIVATE iocoro::iocoro Threads::Threads)
+target_compile_features(iocoro_tcp_throughput PRIVATE cxx_std_20)
+target_compile_options(iocoro_tcp_throughput PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+
+add_executable(asio_tcp_throughput apps/asio_tcp_throughput.cpp)
+target_link_libraries(asio_tcp_throughput PRIVATE Threads::Threads)
+target_compile_features(asio_tcp_throughput PRIVATE cxx_std_20)
+target_compile_options(asio_tcp_throughput PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+target_include_directories(asio_tcp_throughput PRIVATE ${Boost_INCLUDE_DIRS})
