--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -33,3 +33,14 @@ target_link_libraries(asio_tcp_throughput PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_throughput PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_throughput PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_throughput PRIVATE ${Boost_INCLUDE_DIRS})
+
+add_executable(iocoro_udp_send_receive apps/iocoro_udp_send_receive.cpp)
+target_link_libraries(iocoro_udp_send_receive PRIVATE iocoro::iocoro Threads::Threads)
+target_compile_features(iocoro_udp_send_receive PRIVATE cxx_std_20)
+target_compile_options(iocoro_udp_send_receive PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+
+add_executable(asio_udp_send_receive apps/asio_udp_send_receive.cpp)
+target_link_libraries(asio_udp_send_receive PRIVATE Threads::Threads)
+target_compile_features(asio_udp_send_receive PRIVATE cxx_std_20)
+target_compile_options(asio_udp_send_receive PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+target_include_directories(asio_udp_send_receive PRIVATE ${Boost_INCLUDE_DIRS})
