--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -44,3 +44,14 @@ target_link_libraries(asio_udp_send_receive PRIVATE Threads::Threads)
 target_compile_features(asio_udp_send_receive PRIVATE cxx_std_20)
 target_compile_options(asio_udp_send_receive PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_udp_send_receive PRIVATE ${Boost_INCLUDE_DIRS})
+
+add_executable(iocoro_timer_churn apps/iocoro_timer_churn.cpp)
+target_link_libraries(iocoro_timer_churn PRIVATE iocoro::iocoro Threads::Threads)
+target_compile_features(iocoro_timer_churn PRIVATE cxx_std_20)
+target_compile_options(iocoro_timer_churn PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+
+add_executable(asio_timer_churn apps/asio_timer_churn.cpp)
+target_link_libraries(asio_timer_churn PRIVATE Threads::Threads)
+target_compile_features(asio_timer_churn PRIVATE cxx_std_20)
+target_compile_options(asio_timer_churn PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+target_include_directories(asio_timer_churn PRIVATE ${Boost_INCLUDE_DIRS})
