--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -55,3 +55,14 @@ target_link_libraries(asio_timer_churn PRIVATE Threads::Threads)
 target_compile_features(asio_timer_churn PRIVATE cxx_std_20)
 target_compile_options(asio_timer_churn PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_timer_churn PRIVATE ${Boost_INCLUDE_DIRS})
+
+add_executable(iocoro_tcp_latency apps/iocoro_tcp_latency.cpp)
+target_link_libraries(iocoro_tcp_latency PRIVATE iocoro::iocoro Threads::Threads)
+target_compile_features(iocoro_tcp_latency PRIVATE cxx_std_20)
+target_compile_options(iocoro_tcp_latency PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+
+add_executable(asio_tcp_latency apps/asio_tcp_latency.cpp)
+target_link_libraries(asio_tcp_latency PRIVATE Threads::Threads)
+target_compile_features(asio_tcp_latency PRIVATE cxx_std_20)
+target_compile_options(asio_tcp_latency PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+target_include_directories(asio_tcp_latency PRIVATE ${Boost_INCLUDE_DIRS})
