--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -66,3 +66,14 @@ target_link_libraries(asio_tcp_latency PRIVATE Threads::Threads)
 target_compile_features(asio_tcp_latency PRIVATE cxx_std_20)
 target_compile_options(asio_tcp_latency PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
 target_include_directories(asio_tcp_latency PRIVATE ${Boost_INCLUDE_DIRS})
+
+add_executable(iocoro_thread_pool_scaling apps/iocoro_thread_pool_scaling.cpp)
+target_link_libraries(iocoro_thread_pool_scaling PRIVATE iocoro::iocoro Threads::Threads)
+target_compile_features(iocoro_thread_pool_scaling PRIVATE cxx_std_20)
+target_compile_options(iocoro_thread_pool_scaling PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+
+add_executable(asio_thread_pool_scaling apps/asio_thread_pool_scaling.cpp)
+target_link_libraries(asio_thread_pool_scaling PRIVATE Threads::Threads)
+target_compile_features(asio_thread_pool_scaling PRIVATE cxx_std_20)
+target_compile_options(asio_thread_pool_scaling PRIVATE $<$<CXX_COMPILER_ID:GNU>:-fcoroutines>)
+target_include_directories(asio_thread_pool_scaling PRIVATE ${Boost_INCLUDE_DIRS})
